@@ -1,3 +1,7 @@
+Wed Feb 12 00:24:00 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Wed Feb 12 00:18:52 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
